Add basic filter for planning authorities with or without adopted plans

--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -25,41 +25,88 @@
   </div>
 </div>
 
-<div class="app-list__wrapper dl-list-filter__count govuk-!-margin-top-6">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-quarter">
+    <form class="govuk-form">
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            <h1 class="govuk-fieldset__heading">
+              Filter planning authorities
+            </h1>
+          </legend>
 
-  <div class="govuk-body dl-list-filter__count__wrapper">Showing
-    <p class="govuk-visually-hidden">
-      <span class="js-accessible-list-filter__count">{{ organisations|length }}</span>
-      of {{ organisations|length }}
-    </p>
-    <span class="js-list-filter__count" aria-hidden="true">{{ organisations|length }}</span>
-   planning authorities</div>
+          <div class="govuk-radios govuk-radios--small" data-module="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planningAuthorityFilter" name="planningAuthorityFilter" type="radio" value="all" {% if planning_authority_filter is none or planning_authority_filter == 'all'%}checked{% endif %}>
+              <label class="govuk-label govuk-radios__label" for="planningAuthorityFilter">
+                All
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planningAuthorityFilter-2" name="planningAuthorityFilter" type="radio" value="with" {% if planning_authority_filter == 'with'%}checked{% endif %}>
+              <label class="govuk-label govuk-radios__label" for="planningAuthorityFilter-2">
+                With adopted plan
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planningAuthorityFilter-3" name="planningAuthorityFilter" type="radio" value="without" {% if planning_authority_filter == 'without'%}checked{% endif %}>
+              <label class="govuk-label govuk-radios__label" for="planningAuthorityFilter-3">
+                Without adopted plan
+              </label>
+            </div>
+          </div>
+        </fieldset>
+        <div class="govuk-form-group">
+          <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+            Filter
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="govuk-grid-column-three-quarters">
+    <div class="app-list__wrapper dl-list-filter__count govuk-!-margin-top-6">
 
-  <dl class="govuk-summary-list govuk-!-margin-bottom-0" data-filter="list">
-  {% for organisation in organisations %}
+      <div class="govuk-body dl-list-filter__count__wrapper">Showing
+        <p class="govuk-visually-hidden">
+          <span class="js-accessible-list-filter__count">{{ organisations|length }}</span>
+          of {{ organisations|length }}
+        </p>
+        <span class="js-list-filter__count" aria-hidden="true">{{ organisations|length }}</span>
+       planning authorities</div>
 
-    <div class="govuk-summary-list__row" data-filter="item">
-      <dt class="govuk-summary-list__key">
-        <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><a href="{{ url_for('organisation.organisation', reference=organisation.organisation)}}" class="govuk-link govuk-link--text-colour">{{ organisation.name }}</a></h3>
-        <span class="govuk-hint govuk-!-font-size-16">{{ organisation.organisation }}</span>
-      </dt>
-      <dd class="govuk-summary-list__value">
-        {% if organisation.development_plans | length > 0 %}
-        <ul class="govuk-list govuk-!-margin-bottom-1">
-          {% for plan in organisation.development_plans %}
-            <li><a href="{{ url_for('development_plan.plan', reference=plan.reference) }}" class="govuk-link">{{ plan.name }}</a> <span class="govuk-hint">({{plan.reference}})</span></li>
-          {% endfor %}
-        </ul>
-        {% endif %}
-        <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-link">+ add plan</a>
-      </dd>
+      <dl class="govuk-summary-list govuk-!-margin-bottom-0" data-filter="list">
+      {% for organisation in organisations %}
+
+        <div class="govuk-summary-list__row" data-filter="item">
+          <dt class="govuk-summary-list__key">
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><a href="{{ url_for('organisation.organisation', reference=organisation.organisation)}}" class="govuk-link govuk-link--text-colour">{{ organisation.name }}</a></h3>
+            <span class="govuk-hint govuk-!-font-size-16">{{ organisation.organisation }}</span>
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {% if organisation.development_plans | length > 0 %}
+            <ul class="govuk-list govuk-!-margin-bottom-1">
+              {% for plan in organisation.development_plans %}
+                <li><a href="{{ url_for('development_plan.plan', reference=plan.reference) }}" class="govuk-link">{{ plan.name }}</a> <span class="govuk-hint">({{plan.reference}})</span></li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+            <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-link">+ add plan</a>
+          </dd>
+        </div>
+
+      {% endfor %}
+      </dl>
     </div>
 
-  {% endfor %}
-  </dl>
+    <p class="dl-list-filter__no-filter-match">No planning authority matches that search term.</p>
+
+  </div>
 </div>
 
-<p class="dl-list-filter__no-filter-match">No planning authority matches that search term.</p>
+
+
 
 
 {% endblock content %}
