Add line about time limited nature of prototype

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -11,6 +11,8 @@
     <p class="govuk-body">You can create data that meets the <a href="https://digital-land.github.io/specification/specification/development-plan/" class="govuk-link">development plan data standard</a> with this prototype. You can record all the different development plans a local planning authority (LPA) makes (including local plans and neighbourhood plans) as data.</p>
     <p class="govuk-body">For each plan you can capture the events that happen and any documents that are published online during the plan-making process.</p>
 
+    <p class="govuk-body">This prototype is being used for a limited time to help inform our work on data standards. Access is by invite only.</p>
+
     <h2 class="govuk-heading-l">The process for collecting local plans</h2>
     <ol class="govuk-list govuk-list--number">
       <li>You enter data into this prototype</li>
