--- a/application/templates/plan/choose-geography.html
+++ b/application/templates/plan/choose-geography.html
@@ -1,9 +1,14 @@
 {% extends 'layouts/base.html' %}
 
+{% block pageStylesheets %}
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+{% endblock pageStylesheets %}
+
 {% block content %}
 
 <span class="govuk-caption-xl">Development plan: {{ development_plan.reference }}</span>
-<h1 class="govuk-heading-xl">Add geography</h1>
+<h1 class="govuk-heading-xl">Choose geography</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -13,10 +18,27 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
-              Does the plan cover authoring organisations' administrative boundaries?
+              Does the plan cover the authoring organisations' administrative boundaries shown below?
             </h1>
           </legend>
-          <!--<div id="contact-hint" class="govuk-hint">
+            {% for geography in geographies %}
+            <div>
+              {% set geojson = geography["geometry"]|tojson %}
+              {% set point_x = geography["point"].x %}
+              {% set point_y = geography["point"].y %}
+              {% set map_id = "map-" + geography["reference"] %}
+               <div id="map-{{geography['reference']}}" style="height: 45vh;">
+              </div>
+              <script>
+                let map_{{ loop.index }} = L.map('{{map_id}}').setView([{{point_y}}, {{point_x}}], 11);
+                L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: 'OSM' }).addTo(map_{{ loop.index }})
+                L.geoJSON({{geojson}}, {}).addTo(map_{{ loop.index }})
+              </script>
+              <div>
+              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            {% endfor %}
+          </div>
+           <!--<div id="contact-hint" class="govuk-hint">
             Select one option.
           </div>-->
           <div class="govuk-radios__item">
