--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -94,7 +94,16 @@
             <a href="{{ url_for('development_plan.add_geography', reference=plan.reference) }}" class="govuk-link">Edit/Add<span class="govuk-visually-hidden"> record</span></a>
           </div>
         </header>
-        <div class="app-summary-card__body"></div>
+        <div class="app-summary-card__body">
+          <ul>
+            {% for geography in plan.geographies %}
+              <!-- TODO @colm want to display maps? -->
+              <li>
+                {{ geography.reference }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
       </section>
     </div>
   </div>
