update orgainsation design

--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7556,6 +7556,28 @@
 .app-table--sortable th[data-sort="desc"]:after {
   content: " ▲"; }
 
+.app-button--s {
+  padding: 5px;
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 1.14286; }
+  @media print {
+    .app-button--s {
+      font-family: sans-serif; } }
+  @media (min-width: 40.0625em) {
+    .app-button--s {
+      font-size: 16px;
+      font-size: 1rem;
+      line-height: 1.25; } }
+  @media print {
+    .app-button--s {
+      font-size: 14pt;
+      line-height: 1.2; } }
+
 .app-hidden {
   display: none; }
 
