--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -92,7 +92,7 @@
               {% endfor %}
             </ul>
             {% endif %}
-            <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-link">+ add plan</a>
+            <a href="{{ url_for('development_plan.new', organisation=organisation.organisation) }}" class="govuk-button govuk-button--secondary app-button--s govuk-!-margin-top-2">Add plan</a>
           </dd>
         </div>
 
