--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -111,7 +111,7 @@
   <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds">http://localhost:5000/development-plan/braintree-district-local-plan-2033
       <h2 id="timetable" class="govuk-heading-m">Event log</h2>
       <p class="govuk-body">This data should be a collection of events that happen during the plan-making process. Event records may have already happened or might happen on a future date.</p>
       <p class="govuk-body">This data can be used to create a timetable for the plan.</p>
