--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -8,6 +8,7 @@
 @import "components/multi-select";
 @import "components/progress-banner";
 @import "components/table";
+@import "components/button";
 
 .app-hidden {
   display: none
