Add foreign key ref to development plan event type from development plan type.

--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -132,7 +132,7 @@
     <tbody class="govuk-table__body">
       {% for evt in development_plan.timetable %}
       <tr class="govuk-table__row" data-timetable-entry-reference="{{ evt.reference }}" data-timetable-entry-plan="{{ evt.development_plan.reference }}">
-        <td scope="row" class="govuk-table__header">{{ evt.development_plan_event }}</td>
+        <td scope="row" class="govuk-table__header">{{ evt.development_plan_event_type.name }}</td>
         <td class="govuk-table__cell">{{ evt.event_date }}</td>
         <td class="govuk-table__cell">{% for org in evt.organisations %}{{ org.name }}{{ ', ' if not loop.last }}{% endfor %}</td>
         <td class="govuk-table__cell app-cell--meta">{{ evt.entry_date }}</td>
