--- a/application/templates/plan/choose-geography.html
+++ b/application/templates/plan/choose-geography.html
@@ -21,23 +21,31 @@
               Does the plan cover the authoring organisations' administrative boundaries shown below?
             </h1>
           </legend>
-            {% for geography in geographies %}
-            <div>
-              {% set geojson = geography["geojson"] | tojson %}
-              {% set point_x = geography["lat"] %}
-              {% set point_y = geography["long"] %}
-              {% set map_id = "map-" + geography["reference"] %}
-               <div id="map-{{geography['reference']}}" style="height: 45vh;">
-              </div>
-              <script>
-                let map_{{ loop.index }} = L.map('{{map_id}}').setView([{{ point_x }}, {{ point_y }}], 11);
-                L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: 'OSM' }).addTo(map_{{ loop.index }})
-                L.geoJSON({{geojson}}, {}).addTo(map_{{ loop.index }})
-              </script>
-              <div>
-              <input type="hidden" name="geography-reference" value="{{geography['prefix']}}:{{geography['reference']}}">
-              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            {% for org in development_plan.organisations %}
+              {% if org.geometry %}
+                <div>
+                  {% set geojson = geographies[org.organisation].geojson | tojson %}
+                  {% set point_x = geographies[org.organisation].lat_long()[0] %}
+                  {% set point_y = geographies[org.organisation].lat_long()[1] %}
+                  {% set map_id = "map-" + geographies[org.organisation].statistical_geography %}
+                  <div id="map-{{geographies[org.organisation].statistical_geography}}" style="height: 45vh;">
+                  </div>
+                  <script>
+                    let map_{{ loop.index }} = L.map('{{map_id}}').setView([{{ point_x }}, {{ point_y }}], 11);
+                    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: 'OSM' }).addTo(map_{{ loop.index }})
+                    L.geoJSON({{geojson}}, {}).addTo(map_{{ loop.index }})
+                  </script>
+                  <div>
+                  <input type="hidden" name="geography-reference" value="statistical-geography:{{geographies[org.organisation].statistical_geography}}">
+                  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+              {% endif %}
             {% endfor %}
+            {% for org in development_plan.organisations %}
+              {% if not org.geometry %}
+                    <p>No geometry found for {{org.name}}</p>
+              {% endif %}
+            {% endfor %}
+
           </div>
            <!--<div id="contact-hint" class="govuk-hint">
             Select one option.
