Allow upload of zip containing shapefiles.

--- a/application/templates/plan/choose-geography.html
+++ b/application/templates/plan/choose-geography.html
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
 
   <div class="govuk-grid-column-two-thirds">
-    <form class="govuk-form" method="POST" action="{{url_for('development_plan.add_geography', reference=development_plan.reference)}}">
+    <form class="govuk-form" method="POST" action="{{url_for('development_plan.add_geography', reference=development_plan.reference)}}" enctype="multipart/form-data">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
