--- a/application/templates/plan/choose-geography.html
+++ b/application/templates/plan/choose-geography.html
@@ -73,11 +73,12 @@
                   </label>
                   <input class="govuk-file-upload" id="file-upload" name="fileUpload" type="file">
                 </div>
-                <div class="govuk-form-group"
+                <div class="govuk-form-group">
                   <label class="govuk-label" for="designated-plan-area">
                     Area name
                   </label>
-                  <input class="govuk-input" id="designated-plan-area" name="designated-plan-area" type="text">
+                  <input class="govuk-input" id="designated-plan-area" name="designated-plan-area" type="text" required>
+                </div>
                 <p class="govuk-body">or</p>
 
                 <div class="govuk-form-group">
