js-hidden class should 100% hide the thing

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -11,6 +11,10 @@
 @import "components/button";
 @import "components/summary-list";
 
+.js-hidden {
+  display: none !important;
+}
+
 .app-hidden {
   display: none
 }
